--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,7 @@
 -e git://github.com/boto/botocore.git@develop#egg=botocore
 pytest==3.2.3
 pytest-cov==2.5.1
+pytest-catchlog==1.2.2
 coverage==4.3.4
 flake8==3.5.0
 mock==2.0.0
