--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 matrix:
   include:
     - python: 2.7
-      env: TEST_TYPE=test
+      env: TEST_TYPE=prcheck
     - python: 3.3
       env: TEST_TYPE=test
     - python: 3.4
@@ -11,7 +11,7 @@ matrix:
     - python: 3.5
       env: TEST_TYPE=test
     - python: 3.6
-      env: TEST_TYPE=test
+      env: TEST_TYPE=prcheck
     - python: 3.6
       env: TEST_TYPE=coverage
 install:
